<resources>
    <string name="app_name">Musique</string>

    <string name="default_text_1_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean posuere ut lacus in tincidunt. Fusce molestie ante quis euismod viverra. Integer tincidunt venenatis tortor eget dapibus. Fusce egestas libero vel auctor auctor. Nulla facilisi. Ut pretium, dui quis eleifend posuere, risus risus elementum enim, eu efficitur metus nunc sit amet eros. Duis pellentesque congue ultricies.</string>

    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>

    <string name="settings_button">Settings</string>
    <string name="open_button">Open</string>

    <string name="tempo_control_percentage">%1$d%%</string>
    <string name="tempo_control_tempo">BPM = %1$d</string>

    <string name="open_button_cont_desc">Open</string>
    <string name="main_settings_cont_desc">Settings</string>
    <string name="side_menu_button_cont_desc">Side Menu</string>

    <string name="play_button_cont_desc">Play</string>
    <string name="restart_button_cont_desc">Restart</string>

    <string name="instrument_control_button_cont_desc">Instrument Controller</string>
    <string name="print_button_cont_desc">Print</string>
    <string name="volume_button_cont_desc">Volume</string>
    <string name="metronome_button_cont_desc">Metronome</string>
    <string name="settings_button_cont_desc">Settings</string>
    <string name="tempo_button_cont_desc">Tempo</string>
    <string name="transpose_button_cont_desc">Transpose</string>

    <string name="transpose_dialog_label">Transpose</string>
    <string name="transpose_key_label">Key</string>
    <string name="transpose_direction_label">Direction</string>
    <string name="transpose_tablature_label">Tablature</string>

    <string name="more_options_button_cont_desc">More Options</string>

    <string name="browse_button_text">Browse</string>

    <string-array name="music_layout_values">
        <item>"Horizontal"</item>
        <item>"Vertical"</item>
        <item>"Paged"</item>
    </string-array>

    <string name="main_settings_chord_symbol_style_text">Chord symbol style</string>
    <string-array name="main_settings_chord_symbol_style_values">
        <item>"auto"</item>
        <item>"Cmaj7 (normal)"</item>
        <item>"C△ (jazzy)"</item>
    </string-array>

    <string name="main_settings_show_chord_diagrams_text">Show chord diagrams</string>
    <string-array name="main_settings_show_chord_diagrams_values">
        <item>"auto"</item>
        <item>"never"</item>
        <!--<item>"always"</item>-->
    </string-array>

    <string name="main_settings_default_font_text">Default font</string>
    <string-array name="main_settings_default_font_values">
        <item>"Times New Roman"</item>
        <item>"Open Sans"</item>
    </string-array>

    <string name="main_settings_default_music_font_text">Default music font</string>
    <string-array name="main_settings_default_music_font_values">
        <item>"Bravura"</item>
        <item>"Petaluma"</item>
        <item>"Leland"</item>
    </string-array>

    <string-array name="transpose_keys">
        <item>"C&#9837;/A&#9837;m"</item>
        <item>"G&#9837;/E&#9837;m"</item>
        <item>"D&#9837;/B&#9837;m"</item>
        <item>"A&#9837;/Fm"</item>
        <item>"E&#9837;/Cm"</item>
        <item>"B&#9837;/Gm"</item>
        <item>"F/Dm"</item>

        <item>"C/Am"</item>

        <item>"G/Em"</item>
        <item>"D/Bm"</item>
        <item>"A/F&#9839;m"</item>
        <item>"E/C&#9839;m"</item>
        <item>"B/G&#9839;m"</item>
        <item>"F&#9839;/D&#9839;m"</item>
        <item>"C&#9839;/A&#9839;m"</item>
    </string-array>

    <string-array name="transpose_direction_values">
        <item>"Closest"</item>
        <item>"Up"</item>
        <item>"Down"</item>
    </string-array>

    <string-array name="transpose_tablature_values">
        <item>"Auto"</item>
        <item>"Use Capo"</item>
        <item>"No Capo"</item>
    </string-array>

</resources>